# Cpp-Project

./: Bibioteca POO Consola README.txt  Consola - INSTRUCOES.docx  ListaProjecto.txt
exe/: CMakeLists.txt  Interface.cpp  Interface.h  aparelho.cpp  aparelho.h  comandos.txt  habitacao.cpp  habitacao.h  main.cpp  processador.cpp  processador.h  propriedades.cpp  propriedades.h  regras.cpp  regras.h  sensores.cpp  sensores.h  terminal.cpp  terminal.h  zonas.cpp  zonas.h
